--- a/HE.html
+++ b/HE.html
@@ -1,10 +1,9 @@
 <html> <!-- do not use <!DOCTYPE html> -->
 
 <head>
-  <title>TemplateEN templateTR</title>
-  <meta name="keywords" content="TemplateEN, templateTR, patoloji, atlas, pathology, whole slide image">
-
-  <meta name="description" content="TemplateEN templateTR">
+  <title>Organising Thrombus Organize Trombus</title>
+  <meta name="keywords" content="Organising Thrombus, Organize Trombus, patoloji, atlas, pathology, whole slide image">
+  <meta name="description" content="Organising Thrombus Organize Trombus">
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,8 +56,8 @@
           ServerFormat: 'Default', // optional
           xmlns: 'http://schemas.microsoft.com/deepzoom/2008', // see .dzi file
           Size: {
-            Width: '51792', // see .dzi file
-            Height: '30580' // see .dzi file
+            Width: '63574', // see .dzi file
+            Height: '57515' // see .dzi file
           }
         }
       }
